# arborax

./: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
arborax/: __init__.py  backup.py
arborax/jax/: ops.py
arborax/lowlevel/: beagle_cffi.old  beagle_cffi.old.1  beagle_cffi.py
arborax/ops/: binder.py
arborax/tests/: test_5taxa.py  test_batch_site.py  test_grad_Q.py  test_grad_pi.py  test_scaling.py
arborax/utils/: tree.py
src/arborax/: __init__.py  backup.py  beagle_cffi.py  binder.py  context.py  custom.py  io.py  markov.py  parameters.py  pure.py  tree.py
tests/: conftest.py  test_5taxa.py  test_batch_site.py  test_callable_likelihood.py  test_custom_vjp.py  test_eigen_vs_naive.py  test_grad_Q.py  test_grad_pi.py  test_loglik_integration.py  test_newick_parse.py  test_preorder.py  test_pure_vs_beagle.py  test_reference.py  test_safe_likelihood.py  test_scaling.py
