[project]
name = "arborax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hanbin Lee", email = "hblee@umich.edu" },
    { name = "Jonathan Terhorst", email = "jonth@umich.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "cffi>=2.0.0",
    "jax[cuda12]>=0.8.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "slow: long-running tests (opt-in)",
]
